# testfolio

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: test.py
testfolio/: __init__.py  backtest.py  utils.py  visualize.py
tests/: test_testfolio.py
